--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -136,7 +136,7 @@ $colorTheme4: linear-gradient(90deg, rgba(56,31,25,1) 21%, rgba(115,87,65,1) 88%
         .left-width{
             width: 300px;
             transition: all .7s .6s ease;
-            .poject-text-style-h2{
+            .project-text-style-h2{
                 margin-bottom: 20px;
                 font-size: 25px
             }
@@ -284,10 +284,8 @@ footer{
                 .details{
                     margin-bottom: 20px;  
                 }
-                .social{
-
-                }
             }
         }
     }
 }
+@import "./mediaquery";
