--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -127,7 +127,7 @@
   width: 300px;
   transition: all 0.7s 0.6s ease;
 }
-.page3 .project-flex-content .left-width .poject-text-style-h2 {
+.page3 .project-flex-content .left-width .project-text-style-h2 {
   margin-bottom: 20px;
   font-size: 25px;
 }
@@ -266,4 +266,100 @@ footer .container5 .contact-container .contact-right i {
 }
 footer .container5 .contact-container .contact-right .details {
   margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+  .container {
+    width: 80%;
+  }
+  .page1 .container1 .text-content h1 {
+    font-size: 20px;
+  }
+  .page2 {
+    padding-bottom: 100px;
+  }
+  .page2 .container2 .title-section {
+    font-size: 20px;
+  }
+  .page2 .container2 .content2 {
+    flex-direction: column;
+  }
+  .page2 .container2 .content2 .column-left2 {
+    margin-bottom: 20px;
+  }
+  .page2 .container2 .content2 .column-left2 img {
+    width: 200px;
+    height: 200px;
+  }
+  .page2 .container2 .content2 .column-right2 {
+    width: 100%;
+    font-size: 14px;
+    text-align: justify;
+  }
+  .page3 .container3 .title-section3 {
+    font-size: 20px;
+    margin-top: -50px;
+  }
+  .page3 .container3 .project-flex-content {
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+  .page3 .container3 .project-flex-content .column-left3 {
+    margin-bottom: 20px;
+  }
+  .page3 .container3 .project-flex-content .column-left3 .project-text-style-h2 {
+    font-size: 17px;
+  }
+  .page3 .container3 .project-flex-content .column-left3 p {
+    font-size: 14px;
+  }
+  .page3 .container3 .project-flex-content .column-left3 .project-btn {
+    width: 100px;
+    height: 25px;
+  }
+  .page3 .container3 .project-flex-content .column-left3 .project-btn::after {
+    font-size: 13px;
+  }
+  .page3 .container3 .project-flex-content .Pimage-style {
+    width: 100%;
+    height: 200px;
+  }
+  .page4 .title-section {
+    font-size: 20px;
+  }
+  .page4 .container4 .skills-content {
+    flex-direction: column;
+  }
+  .page4 .container4 .skills-content .column-left {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .page4 .container4 .skills-content .column-left h2 {
+    font-size: 17px;
+    text-align: center;
+  }
+  .page4 .container4 .skills-content .column-left p {
+    font-size: 14px;
+    text-align: justify;
+  }
+  .page4 .container4 .skills-content .column-right {
+    width: 100%;
+  }
+  .page4 .container4 .skills-content .column-right .img-container img {
+    height: 50px;
+  }
+  footer .container5 .title-section {
+    font-size: 20px;
+  }
+  footer .container5 .contact-container {
+    flex-direction: column;
+    font-size: 14px;
+  }
+  footer .container5 .contact-container .contact-left {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  footer .container5 .contact-container .contact-right {
+    width: 100%;
+  }
 }/*# sourceMappingURL=styles.css.map */
