--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,26 @@
   bottom: 0;
   right: 0;
   height: 50px;
-  background-color: transparent;
+  background: rgba(115, 87, 65, 0.7);
+  z-index: 10;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+.nav-bar .navbar-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: flex-end;
+}
+.nav-bar .navbar-content ul {
+  display: flex;
+  list-style: none;
+  color: white;
+}
+.nav-bar .navbar-content ul li {
+  margin-left: 60px;
 }
 
 .container {
