--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -17,7 +17,25 @@ $colorTheme4: linear-gradient(90deg, rgba(56,31,25,1) 21%, rgba(115,87,65,1) 88%
     bottom: 0;
     right: 0;
     height: 50px;
-    background-color: transparent;
+    background: rgba(115,87,65,.7);
+    z-index: 10;
+    backdrop-filter: blur(10px);
+    .navbar-content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        justify-content: flex-end;
+        ul{
+            display: flex;
+            list-style: none;
+            color: white;
+            li{
+                margin-left: 60px;
+            }
+        }
+    }
 }
 
 //Container style to all
