--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -8,6 +8,11 @@
                 h1{
                     font-size: 20px;
                 }
+                button{
+                    font-size: 13px;
+                    margin-top: 10px;
+                    padding: 7px 13px 7px 13px;
+                }
             }
         }
     }
@@ -28,7 +33,7 @@
                 }
                 .column-right2{
                     width: 100%;
-                    font-size: 14px;
+                    font-size: 13px;
                     text-align: justify;
                 }
             }
@@ -44,17 +49,25 @@
                 flex-direction: column;
                 margin-bottom: 50px;
                 .column-left3{
-                    margin-bottom: 20px;
+                    margin-bottom: 25px;
                     .project-text-style-h2{
                         font-size: 17px;
                     }
                     p{
-                        font-size: 14px;
+                        font-size: 13px;
                     }
-                    .project-btn{
-                        width: 100px;
-                        height: 25px;
-                        &::after{
+                    .btn-container{
+                        margin-bottom: 0px;
+                        .project-btn{
+                            width: 100px;
+                            height: 25px;
+                            &::after{
+                                font-size: 13px;
+                            }
+                        }
+                        button{
+                            width: 100px;
+                            height: 25px;
                             font-size: 13px;
                         }
                     }
