--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -289,8 +289,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
     }
 }
 footer{
-    background: $colorTheme1;
-    color: white;
+    background: white;
     padding-bottom: 50px;
     .container5{
         .contact-container{
@@ -304,33 +303,45 @@ footer{
                 }
             }
             .contact-left{
+                label{
+                    font-weight: 500;
+                }
                 input, textarea{
                     outline: none;
                     padding: 17px;
                     border: none;
                     margin: 10px 0 20px 0;
-                    border-radius: 7px;
+                    border-bottom: 2px solid #772f1a;
                 }
                 .submit{
-                    background-color: white;
-                    width: 110px;
-                    font-size: 14px;
-                    padding: 10px;
-                    border-radius: 7px;
+                    background: $colorTheme3;
+                    width: 130px;
+                    font-size: 18px;
+                    padding: 9px;
                     outline: none;
                     border: none;
+                    border-radius: 7px;
+                    color: white;
                     cursor: pointer;
+                    i{
+                        color: $colorTheme1;
+                    }
                 }
             }
             .contact-right{
                 width: 45%;
                 display: flex;
                 flex-direction: column;
+                span{
+                    font-size: 20px;
+                }
                 i{
-                    margin-top: 10px;
+                    margin: 20px 10px 0 0;
+                    color: $colorTheme1;
+                    font-size: 30px;
                 }
                 .details{
-                    margin-bottom: 20px;  
+                    margin-bottom: 30px;  
                 }
             }
         }
