--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -274,8 +274,7 @@
 }
 
 footer {
-  background: #772f1a;
-  color: white;
+  background: white;
   padding-bottom: 50px;
 }
 footer .container5 .contact-container {
@@ -289,33 +288,45 @@ footer .container5 .contact-container .contact-left form {
   display: flex;
   flex-direction: column;
 }
+footer .container5 .contact-container .contact-left label {
+  font-weight: 500;
+}
 footer .container5 .contact-container .contact-left input, footer .container5 .contact-container .contact-left textarea {
   outline: none;
   padding: 17px;
   border: none;
   margin: 10px 0 20px 0;
-  border-radius: 7px;
+  border-bottom: 2px solid #772f1a;
 }
 footer .container5 .contact-container .contact-left .submit {
-  background-color: white;
-  width: 110px;
-  font-size: 14px;
-  padding: 10px;
-  border-radius: 7px;
+  background: linear-gradient(90deg, rgb(119, 47, 26) 4%, rgb(238, 193, 112) 100%);
+  width: 130px;
+  font-size: 18px;
+  padding: 9px;
   outline: none;
   border: none;
+  border-radius: 7px;
+  color: white;
   cursor: pointer;
+}
+footer .container5 .contact-container .contact-left .submit i {
+  color: #772f1a;
 }
 footer .container5 .contact-container .contact-right {
   width: 45%;
   display: flex;
   flex-direction: column;
 }
+footer .container5 .contact-container .contact-right span {
+  font-size: 20px;
+}
 footer .container5 .contact-container .contact-right i {
-  margin-top: 10px;
+  margin: 20px 10px 0 0;
+  color: #772f1a;
+  font-size: 30px;
 }
 footer .container5 .contact-container .contact-right .details {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -422,7 +433,17 @@ footer .container5 .contact-container .contact-right .details {
     width: 100%;
     margin-bottom: 50px;
   }
+  footer .container5 .contact-container .contact-left .submit {
+    width: 110px;
+    font-size: 14px;
+  }
   footer .container5 .contact-container .contact-right {
     width: 100%;
+  }
+  footer .container5 .contact-container .contact-right span {
+    font-size: 14px;
+  }
+  footer .container5 .contact-container .contact-right i {
+    font-size: 18px;
   }
 }/*# sourceMappingURL=styles.css.map */
