--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -56,7 +56,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
         backdrop-filter: blur(10px);
         box-shadow: 0 1px 9px -5px gray;
         .navbar-content{
-            width: 100%;
+            width: 90%;
             height: 100%;
             display: flex;
             justify-items: center;
@@ -246,7 +246,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
         .title-section3{
             color: black;
             margin-top: -100px;
-            padding: 100px 0 100px 0;
+            // padding: 100px 0 100px 0;
             z-index: 2;
         }
         .content3{
