--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -246,7 +246,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
         .title-section3{
             color: black;
             margin-top: -100px;
-            // padding: 100px 0 100px 0;
+            padding: 100px 0 100px 0;
             z-index: 2;
         }
         .content3{
