--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -2,6 +2,7 @@
 $colorTheme1: #772f1a;
 $colorTheme2: #eec170;
 $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 100%);
+$colorTheme4: linear-gradient(90deg, rgba(238,193,112,1) 0%, rgba(119,47,26,1) 100%);
 *{
     margin: 0;
     padding: 0;
@@ -104,7 +105,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
 //Page2
 .page2 {
     width: 100%;
-    background: $colorTheme3;
+    background: $colorTheme1;
     position: relative;
     overflow: hidden;
     z-index: -2;
@@ -141,7 +142,6 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
                     height: 390px;
                     object-fit: cover;
                     object-position: 50% 10%;
-                    box-shadow: 6px 4px 5px $colorTheme2 ;
                     border-radius: 50%;
                 }
             }
@@ -150,7 +150,8 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
                 width: 550px;
                 .text{
                     line-height: 25px;
-                    text-shadow: 0 0 1px black;
+                    font-weight: 300;
+                    // text-shadow: 0 0 1px black;
                 }
             }
         }
@@ -262,7 +263,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
     }
 }
 .page4{
-    background: $colorTheme3;
+    background: $colorTheme1;
     color: white;
     padding-bottom: 150px;
     .container4{
@@ -280,6 +281,7 @@ $colorTheme3: linear-gradient(90deg, rgba(119,47,26,1) 4%, rgba(238,193,112,1) 1
                 }
                 p{
                     line-height: 25px;
+                    font-weight: 300;
                 }
             }
             .column-right{
@@ -322,7 +324,7 @@ footer{
                     border-bottom: 2px solid #772f1a;
                 }
                 .submit{
-                    background: $colorTheme3;
+                    background: $colorTheme4;
                     width: 130px;
                     font-size: 18px;
                     padding: 9px;
@@ -332,7 +334,7 @@ footer{
                     color: white;
                     cursor: pointer;
                     i{
-                        color: $colorTheme1;
+                        color: white;
                     }
                 }
             }
