--- a/CSS/_mediaquery.scss
+++ b/CSS/_mediaquery.scss
@@ -385,10 +385,10 @@
         .container1{
             .text-content{
                 h1{
-                    font-size: 20px;
+                    font-size: 25px;
                 }
                 button{
-                    font-size: 13px;
+                    font-size: 14px;
                     margin-top: 10px;
                     padding: 7px 0px 7px 0px;
                     width: 120px;
@@ -524,17 +524,42 @@
     }
 }
 @media only screen and (max-width: 480px){
+    .page1{
+        .container1{
+            .text-content{
+                h1{
+                    font-size: 23px;
+                    width: 250px;
+                }
+            }
+        }
+    }
     .page2{
         .container2{
             .content2{
                 .column-right2{
                     .text{
-                        font-size: 12px;
+                        font-size: 13px;
                     }
                 }
             }
         }
     }
+    .page4{
+        padding-bottom: 50px;
+        .container4{
+            .skills-content{
+                flex-direction: column;
+                .column-left{ 
+                    p{
+                        font-size: 13px;
+                    }
+                }
+                
+            }
+        }
+    }
+    
 }
 @media only screen and (max-width: 440px){
     .page3 {
